# symba-alice-2026

./: .gitignore  pyproject.toml
DNA_part/: plot_results.py  simulation.py  survival.csv
src/symba_alice_2026/: __init__.py  barricelli_reproductions.ipynb  basic_barricelli.py  combined_environment.py  demos.py  mutual_info.py  two_dimensional.py  visualise_connectivity.py
